--- a/games/Street-Fighter/Six/守りの基本.md
+++ b/games/Street-Fighter/Six/守りの基本.md
@@ -214,3 +214,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 ラグいと特に投げ抜けは危険。
 
 最初は起き上がりジャストパリィを積極的に狙って、いろんなダウンから起き上がりのタイミングに慣れるべき。特に持続を重ねるタイプの起き攻めに見てからジャストパリィを合わせられると便利。
+
+体力があって、相手の後ろ投げで画面端に追い込まれそうな場面は無敵技で切り返したい場面。リスクが小さくて、何もしないとどっちみち後ろ投げやシミーから追い詰められる。
