--- a/shared/discussion/結論から伝える.md
+++ b/shared/discussion/結論から伝える.md
@@ -4,3 +4,12 @@
 結論から話すには、相手が聞きたいことを把握しないといけない。
 
 結論とは、「自分が話したいこと」ではなく、「相手が聞きたいこと」だ。
+
+結論というのは、「相手に何をして欲しいか」である。
+「ちょっと意見を聞きたいんですけど」とか、前置きで結論を示唆することで、聞き手はそれに向けて聞ける。何をして欲しいかわからないと、何を聞いていいかわからなくて全部聞かないといけなくなる。
+
+「これ「どうしたらよかってん！？」って話なんですけど」
+「これ「お前イキってんちゃうぞ」って話なんですけど」
+みたいに「同じツッコミを入れてほしい」と前置きすることで共感しやすくなる。聞き手が同じツッコミに落ち着いたら共感したってことになる。
+
+https://youtu.be/rW6Q1-hPQJM?si=5UxQp1zFk1YOnXhe
