--- a/shared/joke/frameworks/ボケとツッコミ.md
+++ b/shared/joke/frameworks/ボケとツッコミ.md
@@ -61,3 +61,5 @@ https://www.youtube.com/watch?v=fdudK1c6ryM&list=PL_h46lFr5PBiEsF4CAlzHg5RnxGyEm
 ツッコミによってボケを分類できるかも。
 
 「そんなことないだろ」
+
+ツッコミは聴衆の代弁者なので、わかりやすいボケならツッコミがいなくてもなんとかなる。
