--- a/shared/joke/ボケの例.md
+++ b/shared/joke/ボケの例.md
@@ -91,3 +91,10 @@ https://dekirukaiwajutu.com/category2/
 ボイスの前に全然違う声色でリハーサルするフリ。
 
 長々とおすすめを話して、「私はやりませんけど」でオチ。
+
+ただでさえ多いものをまず少なめに言っておいて、積み増しするのもボケ。
+
+「保険も5社入ってるんですよ」
+（多いやろ）
+「ソニー、明治、日本生命、アフラック、共済、住友、あ、6社でしたわ」
+（まだあるんかい）
