--- a/shared/care/tips/関心をひく.md
+++ b/shared/care/tips/関心をひく.md
@@ -35,6 +35,12 @@
 - 肩を叩く
 - 服や手を引っ張る
 
+言語的:
+
+- 相手が関心を持っていることを話す
+- 結論から話す
+  - 相手にして欲しいことを示す
+
 ## その他
 
 注意を引くための前置きにはどんなパターンがあるか。
@@ -134,3 +140,7 @@ https://x.com/masillo/status/478575781933621248
 人気者は関心を集めやすい。知っているから話を聞こうとする。
 
 面倒を見てもらう、関心を集めるためにどうするか。
+
+相手にしてほしいことを伝えると、相手は自分ごととして構える。関心を持つ。
+
+結論から話すのは関心を引くため。
