--- a/shared/education/mentoring/指導.md
+++ b/shared/education/mentoring/指導.md
@@ -117,3 +117,5 @@ achievement と関連。
 相手に作業の進め方を解説してもらって、レビューしてから進めてもらうのもいい。
 
 意図せずに行ったことであれば、まずは意図してコントロールすることから教える。
+
+間違ったところを伝えるだけでは合っているところがわからない。逆も同じ。合っているところと間違っているところをいちいち全部伝える。
