--- a/shared/math/changes/無限.md
+++ b/shared/math/changes/無限.md
@@ -2,3 +2,5 @@
 
 数学の世界において有限個は少ない。
 「素数が規則的に1兆個並んでいる」とか言われても「少ないな」って思わないといけない。無限に比べると有限はないようなもの。
+
+無限階のホテルが満室になっていてさらに追加で宿泊客が来ても泊められるって例え話があるけど、そもそも満室ってどうやって定義されてるの？
