--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -59,3 +59,5 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 地声は柔らかくないといけない。わざわざ裏声にしないと硬いようでは良い地声とは言えない。
 
 息の圧だけで高い声を出せば、強くても柔らかい声になる。まずは息を信じて、喉を開く。
+
+女は多少声が硬くなっても裏声気味だから限度があるけど、男は硬くなりすぎる。裏声や鼻声で誤魔化すのは妥協。
