--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -269,3 +269,6 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 強い息なのに声を小さく抑える癖がつくのは良くない。
 
 リップロールとかで声を抑えながら強い息を使う練習をしてもいい。
+
+嘔吐するときみたいな感覚で、あるいはふんばるような感覚で横隔膜を押し下げてしまうと声に力が入りすぎる。
+横隔膜を引き下げて、下腹で下から叩くように内圧を上げることで、楽に強く息を吐く。
