--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -1,6 +1,14 @@
 # 声を柔らかくする
 
-## 方法
+## 声が硬くなる要因
+
+- 喉が上がっている
+- 舌が奥に入っている
+- 舌に力が入っている
+- 声帯に力が入っている
+- 横隔膜を押し下げている
+
+## 声を柔らかくする方法
 
 二つの方法がある。
 
@@ -61,3 +69,5 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 息の圧だけで高い声を出せば、強くても柔らかい声になる。まずは息を信じて、喉を開く。
 
 女は多少声が硬くなっても裏声気味だから限度があるけど、男は硬くなりすぎる。裏声や鼻声で誤魔化すのは妥協。
+
+天井を向いて声を出すと舌に力が入ったときにわかる。これで高い声を出す。
