--- a/shared/work/strength/強さ.md
+++ b/shared/work/strength/強さ.md
@@ -81,3 +81,8 @@
 強靭であるためには、強く、柔らかくないといけない。
 
 強固であるためには、強く、固くならないといけない。
+
+強くなる方法はたくさんある。
+短所があったからといって、強くなるのを諦めなくていい。
+
+「不利な要因であっても、不能の要因ではない」『ハイキュー！』
