--- a/shared/breath/training/tips/横隔膜を下げる.md
+++ b/shared/breath/training/tips/横隔膜を下げる.md
@@ -1,3 +1,9 @@
+## ポイント
+
+- 押し下げるのではなく、引き下げる
+
+## その他
+
 横隔膜を下げて息の量を抑えると、結構しっかり腹筋で押し上げないと息が出ない。細い息から太い息までコントロールしやすくなる。
 
 横隔膜を下げるより、腹筋だけで呼吸をコントロールするのが先。喉や肋骨は動かさない。
@@ -180,3 +186,5 @@ https://youtube.com/watch?v=kfUlPS8VuOo&si=oFG8I0Q5oRiJqC9R
 横隔膜を下げるのは単に腹式呼吸で息を吸う感覚と同じ。感覚としては息を吸ったまま、腹筋で加圧して息が外に出るようにする。吸うときは腹筋だけ力を抜く。
 
 横隔膜を下げる練習は息を止めたほうが楽なので、難しかったらまずは息を止めて練習する。
+
+横隔膜は押し下げるのではなく引き下げる。
