--- a/shared/coaching/コーチの役割.md
+++ b/shared/coaching/コーチの役割.md
@@ -15,3 +15,5 @@ https://youtube.com/watch?v=vE1UN0z2jTs&si=BfxFJlDX9Su89gG0
 - そのための観察と介入
 
 コーチはマネージャーに近い。あるいはコーチングがマネジメントの一部と考えるべきかも。プレイヤーのパフォーマンスを最大化するために、プレイヤーを成功に導く。
+
+コーチは親ではない。あくまでも問題に向かっていくのは本人。でも余計な邪魔が入らないようにすることはある。
