--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -823,3 +823,6 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 
 「部下の授業料を顧客に払わせるな」
 部下が失敗して学ぶということは、部下の授業料を顧客が支払っているということ。
+
+趣味の人脈があれば、ものづくりが自分や知人のためになる。
+自分だけのためのものづくりは金にならないけど、10人でも使ってくれる人がいれば広告収入や課金が考えられる。
