--- a/shared/humor/ユーモア.md
+++ b/shared/humor/ユーモア.md
@@ -660,3 +660,5 @@ https://x.com/tomatoha831/status/2008862737355689986?s=20
 まずは自分が笑う。
 
 度が過ぎたユーモアはtrickになることがある。誇張表現は嘘と紙一重。
+
+漫画やアニメだと人に対するユーモアも遠慮なく使えるので、日常会話のユーモアとは範囲が違う。日常会話では人よりも状況やものに対するユーモアのほうが使いやすい。
