--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -118,3 +118,5 @@ https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
 https://youtube.com/shorts/NxEwVb1Y-4o?si=Ocrh7b8EpR0IvnYc
 
 リズムはパターン。韻律。強弱や短長、間、いった部分。音だけじゃない。言語的な韻は響きの韻。ラップは特にリズムを重視した音楽。
+
+キーやテンションはリズムの領域。メロディではない。
