--- a/shared/politics/政治.md
+++ b/shared/politics/政治.md
@@ -124,3 +124,22 @@ business は交換条件、取引による政治。
 ポライトネス理論
 
 面子、自己イメージを尊重する。
+
+ハロルド・ラスウェルは「誰が、何を、いつ、どのように手に入れるか」を政治と考えた。資源の分配。奪い合いではなく、ルールに基づいて解決する仕組み。
+
+異なる価値観の共存。利害の調整。対立の調整。
+社会にはさまざまな利害関係、価値観、世界観があって、摩擦がある。
+
+秩序やルールを維持するための支配と正当性。
+ルールを守らせるための力と、それに反発されないための正当性。
+
+基本的に社会が対象ではある。
+
+カール・シュミットは「友と敵の区別」を政治と考えた。
+ただ、むしろ対立を完全に解消せず、かといって暴力にも委ねないところに政治がある。
+
+- 権力: 誰が決めるのか
+- 正当性: なぜその決定に従うのか
+- 集合的拘束力: 決定が社会全体に及ぶこと
+
+自分が賛成しなかった決定でも、社会的に正当性があれば自分も縛られる点が市場とは異なる。
