--- a/shared/communication/コミュニケーション.md
+++ b/shared/communication/コミュニケーション.md
@@ -293,3 +293,9 @@ social communicationというと企業などから社会に向けた、1:Nのコ
 人とのコミュニケーションによって何を知るべきか。
 
 相手が何を知っているのか。
+
+コミュニケーション自体は手段で、情報を伝達することで何かが起きる。
+基本的には、人を動かしたり、コンピュータを動かしたり、逆に自分が何か情報を知って動いたりする。なんらかの影響がある。
+
+情報を伝達するとなんらかの影響がある。
+むしろなんの影響もなかったら伝達する意味もない。
