--- a/shared/community/パートナー.md
+++ b/shared/community/パートナー.md
@@ -2,6 +2,8 @@
 
 配偶者、支援者、自分を支えてくれる人。仲間。
 
+共通の目的や利益を持って、協力し合う相手。
+
 顧客や社員も一種のビジネスパートナーとして捉える。
 
 オーナーを支えるのがパートナー。
@@ -55,3 +57,5 @@
 相手の幸せを一緒に祝う。自分ごとのように祝う。
 
 多少なりとも損得を共有する。
+
+支援者はパートナーというよりもサポーターかな。
