--- a/shared/politics/秩序.md
+++ b/shared/politics/秩序.md
@@ -40,3 +40,6 @@ systemとcosmos、秩序と混沌。
 秩序とは、例外がないことだ。
 ただし、例外処理が明確になっていれば例外とは言わない。
 明確になっていない例外が増えるほど混沌に近づくが、全てを定義するのは難しい。
+
+ルールを決めること。
+人の意思が介入しないこと。
