--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -196,3 +196,30 @@ Lose-WinをLose-Loseに持ち込む。
 争いって考え方もwarにまとめちゃっていいか。競合とか競争も。でも競争はgameでも良いかも。
 
 戦争にこそ倫理が必要。できるだけ恨みを買わない。恨みを買うなら殲滅する。
+
+どれだけ対話しても、根本的な競合が解消されないと戦争は起きる。
+
+敵対するなら本気で排除することを考えないといけない。
+中途半端に敵対して相手から仕掛けられる方が困る。先手を取った方が有利だ。
+
+尊重の心がなくて平気で敵対するのは良くない。
+どうせ敵対するなら本気で排除することまで考えるべきだ。
+その場合でもできるだけ表立って敵対しないように裏で動いた方がいい。
+
+交渉に失敗すると戦争になることがある。戦争の勝ち方も考えておかないといけない。
+また、ただ勝つだけでなく、損失を抑えて利益が出るように勝たないといけない。
+
+衝突の全てが戦争ではない。
+
+建設的な意見を交わすとか、プラスになる衝突もある。
+
+戦争は、競合を解決するための強引な衝突のこと。
+
+強引に競合を解決しようとしても強く抵抗される。
+
+同じ目的を持って、現状をより良くするための建設的な衝突は推奨されるべき。
+
+他人と意見が違うなんて当たり前だから違う意見を出すのに躊躇がない人もいる。
+逆に他人と意見が違うと気になって意見が出せない人もいる。
+
+- 誰かと意見がぶつかったら、どのように対応するか
