--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -318,3 +318,5 @@ https://www.total-marriage.com/column/1644/
 一緒に何かするでもいい。
 
 学校や職場、サークルのように、一緒にいるための場にいると、親しくなくても一緒にいられる。でも、長期的に考えるとその場は基本的になくなる。その後も一緒にいるには、親しくなるしかない。
+
+手段を選ばない人は、誰かと親しくなるためにその人を孤立させようとする場合がある。
