--- a/shared/trust/intimacy/親しさ.md
+++ b/shared/trust/intimacy/親しさ.md
@@ -199,3 +199,7 @@ intimacyは基本的に恋人に対して使われる表現で、友人にはあ
 寂しいのは親しいのと逆かも。
 
 相手が自分を理解してくれていると思うと、任せられる。intimacyが上がる。
+
+ある種の慣れ。馴染み。親和性。慣れ親しんだもの。
+
+一般的、常識的で慣れ親しんだ使い勝手の製品は新しいものでも親近感がある。
