--- a/shared/trust/reliability/確実性.md
+++ b/shared/trust/reliability/確実性.md
@@ -1,9 +1,10 @@
 # Reliability
 
-- 精密性
-- 一貫性
 - 予測可能性
-- 耐久性
+  - 精密性: ばらつきが小さい
+    - 一貫性
+  - 正確性: 結果が狙いと近い
+  - 耐久性: 壊れない
 
 予測可能性、一貫性も似たようなもの。
 
@@ -11,7 +12,7 @@
 
 結果が安定している、予測できること。
 
-良い結果を期待する前に、結果が安定していないといつも良い結果になるとは考えられない。
+良い結果を期待する前に、結果nが安定していないといつも良い結果になるとは考えられない。
 
 確実性が低いと信頼以前の問題。
 
