--- a/shared/trust/信頼の要素.md
+++ b/shared/trust/信頼の要素.md
@@ -1,9 +1,9 @@
-1. 信憑性・期待感: 実績や根拠がある
-2. 確実性・安定感: 何度やっても同じ結果になる
-3. 利便性・親近感: 身近で頼りやすい
+1. 信憑性: 実績や根拠がある
+2. 確実性: 何度やっても同じ結果になる
+3. 親近感: 身近で頼りやすい、慣れ親しんでいる
 
 確実性が高くても、結果が的外れだと意味がない。
-銃で言うと、的に届いて（信憑性）、何発打っても同じところに当たって（確実性）、反動が少ない方がいい（利便性）。
+銃で言うと、何度もテストされていて（信憑性）、何発打っても同じところに当たって（確実性）、使い慣れている形（親近感）の方がいい。
 
 マシンガンみたいにとにかく数を撃つことで確実性の低さを結果的に補うとか、ぱっと見でわかりづらい状態もある。
 
