--- a/shared/trust/reliability/確実性.md
+++ b/shared/trust/reliability/確実性.md
@@ -1,10 +1,12 @@
 # Reliability
 
-- 予測可能性
-  - 精密性: ばらつきが小さい
-    - 一貫性
-  - 正確性: 結果が狙いと近い
-  - 耐久性: 壊れない
+当てになる。頼りになる。
+
+- 予測可能性: 予測しやすい
+- 精密性: ばらつきが小さい
+- 正確性: 結果が狙いと近い
+- 耐久性: 壊れない
+- 一貫性: 言動が一致している
 
 予測可能性、一貫性も似たようなもの。
 
@@ -16,7 +18,7 @@
 
 確実性が低いと信頼以前の問題。
 
-どこまで依存できるか、他の選択肢を考えなくていいか、かも。
+どこまで依存できるか、他の選択肢を考えなくていいか、かも。dependencyと近い。
 
 - 頼りになる
 - 結果を予測できる
@@ -78,3 +80,5 @@
 普段は優しいけど暴力を振るったり暴言を吐いたりする人は確実性が低いし、そもそも害があるので警戒の対象であるべき。信頼してはいけない。
 
 可用性 (availability) は、必要な時に停止しないこと。稼働率。
+
+同一の条件下で同一の測定を反復した際に同一の結果が得られる程度。
