--- a/shared/care/tips/関心をひく.md
+++ b/shared/care/tips/関心をひく.md
@@ -37,6 +37,7 @@
 
 言語的:
 
+- 相手のことを話題にする
 - 相手が関心を持っていることを話す
 - 結論から話す
   - 相手にして欲しいことを示す
@@ -144,3 +145,6 @@ https://x.com/masillo/status/478575781933621248
 相手にしてほしいことを伝えると、相手は自分ごととして構える。関心を持つ。
 
 結論から話すのは関心を引くため。
+
+結局、誰しも自分の話には関心がある。
+相手の話は相手にとって関心のある話。
