--- a/shared/decision/planning/計画づくり.md
+++ b/shared/decision/planning/計画づくり.md
@@ -54,3 +54,6 @@ https://dev.classmethod.jp/articles/load-to-pm-01-gather-all-todos/
 計画作りは分析でもある。
 
 暇すぎると人は段取りを捨ててしまうので、暇な時間を区切るように強制的に何か人に会う用事を入れるとかして段取りが必要になるようにした方がachievementとしては良い状態。
+
+計画づくりはAIに手伝ってもらうとちょっと楽。
+草案を出してもらうのもいいし、添削してもらうのもいい。
