--- a/shared/documentation/文書管理.md
+++ b/shared/documentation/文書管理.md
@@ -1,1 +1,7 @@
 ドキュメントはそもそも更新しようとしたら維持できない。ありものをとりあえず突っ込んでおいて、要らなくなったら捨てる。追加と削除だけで更新しない。
+
+ドキュメントを整理するときは、いきなり全部触ろうとせずに計画を立てる。
+
+1. 読み返して全体像を掴む
+2. ドメインの構成を検討する
+3. 小さなドメインから手をつける
