--- a/shared/job/経歴.md
+++ b/shared/job/経歴.md
@@ -1,3 +1,5 @@
+# Career
+
 さまざまなキャリアがある中で、何を伸ばすか。
 
 大手の役員とかやってると経営者やコンサルタントの経歴としては良い。
@@ -22,3 +24,6 @@ https://qiita.com/saoyagi2/items/2c0bb9647ee9e16b7f4b
 マネジメント経験がいきなり積めるところはほぼない。
 
 技術の実績になるところは割とある。給料がそんなに良くなくても、内容が良くて、とりあえず3年くらい実績があれば転職できる。
+
+キャリアは、仕事を実績として積み重ねること。
+JobとCreditの合わせ技。
