--- a/shared/action/vibe/勢い.md
+++ b/shared/action/vibe/勢い.md
@@ -5,3 +5,6 @@
 盛り上がるのは空気じゃなくて勢い。
 
 ノリはムードとは違って、勢いがあるかどうか。勢いがあるほど乗っている。勢いがあると行動が促される。特に衝動的な部分。何かに突き動かされる。
+
+勢いがあった方が動きやすいけど、走りすぎてしまうこともある。
+基本的には勢いをつけて、本当に止まらないといけないところは冷静に締める。
