--- a/shared/assertion/自己認識.md
+++ b/shared/assertion/自己認識.md
@@ -16,3 +16,11 @@ https://ja.wikipedia.org/wiki/%E3%82%B8%E3%83%A7%E3%83%8F%E3%83%AA%E3%81%AE%E7%A
 
 多くの人は、他人と対話（自己開示）することで自分の輪郭を確認するが、思考に沈み込むような人は自分で自分の内面を耕して満たす。
 だから、あまり他人との対話や自己開示を必要としない性格を持つ場合がある。
+
+まず、
+やってきたこと、
+好きなこと、嫌いなこと、
+得意なこと、苦手なこと、
+で分けてもいいかも。
+
+自分について第三者視点で見えすぎると逆に余計なことを考えて動きづらい。
