--- a/shared/human/appearance/beauty/cosmetics/化粧品.md
+++ b/shared/human/appearance/beauty/cosmetics/化粧品.md
@@ -3,3 +3,6 @@
 https://ja.wikipedia.org/wiki/%E5%8C%96%E7%B2%A7%E5%93%81
 
 化粧品や薬にも消費期限がある。特に液体。
+
+ドラッグストアで買えるメンズメイクアイテムおすすめ
+https://youtu.be/YVH7_Hdq0QI?si=b_lJjlH4L8Ef6T2p
